# spvwalletpp

./: .gitmodules  CMakeLists.txt  example.cpp
include/: spvwallet.hpp
source/: spvwallet.cpp  spvwallet_database.cpp  spvwallet_logic.cpp  utils.hpp
